# web-scraper

./: pyproject.toml  web-scraper.py
