[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Iris Leal <iris_leal_m@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
